# GradientBlueprint

./: .gitignore  .pypirc  Dockerfile  FeedForward_Starter.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  starter.ipynb  starter_2.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: diagram.yml  publish-to-pypi.yml  pytest.yml  testGradient1_action.yml  testGradient2_action.yml  testGradient_action.yml
AUTOGRAD/documentation/: LogisticRegression.md  Variable.md
AUTOGRAD/src/NNS/: Activation_Functions.py  Neural_Network.py
AUTOGRAD/src/Regression/: Logistic_Regression.py
GradientBluePrint/documentation/: Neural_networks.md  Variable.md
GradientBluePrint/src/Cost_functions/: Cost_functions.py
GradientBluePrint/src/Gradient/: Gradient.py
GradientBluePrint/src/Helpers/: DrawGraph.py
GradientBluePrint/src/Optimizers/: optimizers.py
GradientBluePrint/src/Regression/: Linear_Regression.py
GradientBluePrint/src/SVM/: SVM.py
GradientBluePrint/tests/: test_Gradient1.py  test_Gradient2.py
documentation/: LinearRegression.md  SVM.md
src/Cost_functions/: Cost_functions.py
src/Gradient/: Gradient.py
src/Helpers/: DrawGraph.py
src/NNS/: Activation_Functions.py  Neural_Network.py
src/Optimizers/: optimizer.py
src/Regression/: Linear_Regression.py  Logistic_Regression.py
src/gradientblueprint/Cost_functions/: Cost_functions.py
src/gradientblueprint/Gradient/: Gradient.ipynb  Gradient.py  Gradient_Descent_Visualization_with_Tangents.ipynb  starter.ipynb  starter_2.ipynb
src/gradientblueprint/NNS/: Activation_Functions.py  FeedForward_Starter.ipynb  Neural_Network.py
src/gradientblueprint/Regression/: Linear_Regression.ipynb  Linear_Regression.py  Logistic_Regression.ipynb  Logistic_Regression.py
src/gradientblueprint/SVM/: SVM.py
tests/: test_Gradient.py  test_Gradient1.py  test_Gradient2.py
