[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "gradientblueprint"
version = "1.0.0"
description = "This is a comprehensive package designed to demystify the concepts of gradients and their applications across various machine learning algorithms. With this release, developers and researchers gain access to a powerful toolkit that simplifies the understanding and implementation of gradient-based optimization techniques."
authors = [
    {name="Ramin Mohammadi", email="rey.mhmmd@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]


urls = {"Bug Tracker" = "https://github.com/raminmohammadi/GradientBlueprint/issues"}

dependencies = [
    "pytest",
    "graphviz",
    "numpy",
    "pandas",
    "scikit-learn",
    "jupyterlab",
    "matplotlib"
]

[tool.pip]
requirements = "requirements.txt"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
