[metadata]
name = gradientblueprint
version = 1.0.0
author = Ramin Mohammadi
author_email = r.mohammadi@northeastern.edu
description = This is a comprehensive package designed to demystify the concepts of gradients and their applications across various machine learning algorithms. With this release, developers and researchers gain access to a powerful toolkit that simplifies the understanding and implementation of gradient-based optimization techniques.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raminmohammadi/GradientBlueprint
project_urls =
    Bug Tracker = https://github.com/raminmohammadi/GradientBlueprint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
[options.packages.find]

where = src

[options.package_data]
assets =
    *.txt
